--- a/passwordwallet/Base.lproj/Main.storyboard
+++ b/passwordwallet/Base.lproj/Main.storyboard
@@ -328,11 +328,10 @@
                                         </connections>
                                     </barButtonItem>
                                 </items>
-                                <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </toolbar>
                             <segmentedControl contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="E3k-mV-EqU">
                                 <rect key="frame" x="0.0" y="64" width="600" height="29"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                                 <segments>
                                     <segment title="All"/>
                                     <segment title="Personal"/>
@@ -376,6 +375,7 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="categorySelector" destination="E3k-mV-EqU" id="C7U-bC-X0d"/>
                         <outlet property="passwordTableView" destination="lcl-o7-jaZ" id="dbY-Gp-32Y"/>
                     </connections>
                 </viewController>
